# personal-assistant-whatsapp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  preferences.json  pyproject.toml
app/: main.py  scheduler.py
app/ai/: transcribe.py
app/ai/agents/: assistant_agent.py  assistant_agent_v2.py
app/ai/memory/: __init__.py  base.py  local_memory.py  remote_memory.py
app/ai/tools/: common.py  perplexity_tool.py  preferences_tool.py  sql_tool.py  todoist_tool.py  tool_logging.py
app/api/: dependencies.py
app/api/routes/: users.py
app/controller/: chatbot_controller.py
app/core/: ai_companion_instance.py  audio_utils.py  config.py  scheduler.py
app/core/ai/: local_memory.py
app/db/: database.py
app/db/models/: ai_interaction.py  base.py  goal.py  procrastination_pattern.py  project.py
app/db/repository/: __init__.py  base_repository.py  chat_history_repository.py  (+5 more)
app/models/: __init__.py  ai_interaction.py  chat_history.py  goal.py  procrastination_pattern.py  progress_log.py  project.py  task.py  user.py
app/schemas/: __init__.py  ai_interaction.py  base.py  chat_history.py  goal.py  procrastination_pattern.py  progress_log.py  project.py  task.py  user.py
app/services/: agent_service.py  ai_companion_service.py  audio_service.py  memory_service.py  message_scheduler_service.py  message_service.py
migrations/: env.py
migrations/versions/: 1f6b3ced7385_adding_tables_without_user.py  4ca9feb73097_initial_tables_fr.py  8958017e45b8_removing_user_from_database.py  a34a5fc8993a_initial_tables.py  ab685cd98d84_create_chat_history.py
(+12 files in other folders)
